Dark mode header optimizations / hover fixes

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -51,22 +51,10 @@
 						}
 						
 						&.login {
-							/*
-							background-image: url('https://#{$staticServer}.techspot.com/images/user-account.svg');
-							background-repeat: no-repeat;
-							background-position: 8px center;
-							background-size: 26px;
-							margin-right: 10px;
-							*/
-
-							padding-right: 10px;
 							position: relative;
 
 							@include break(mobile) {
-								/* background-position: center center; */
-								margin: 0;
 								width: 40px;
-								padding-right: 0;
 							}
 							
 							svg {
@@ -88,10 +76,10 @@
 								text-transform: uppercase;
 								font-weight: 400;
 								letter-spacing: 0.2px;
-								padding-left: 12px;
+								padding: 0 10px 0 12px;
 
 								@include break(mobile) {
-									padding-left: 0px;
+									padding: 0px;
 									text-indent: -9999px;
 								}
 							}
@@ -387,18 +375,11 @@
 						}
 
 						&.search {
-							/*
-							background-image: url('https://#{$staticServer}.techspot.com/images/search-icon.svg');
-							background-position: center center;
-							background-color: black;
-							background-repeat: no-repeat;
-							text-indent: -9999px;
-							*/
-
 							width: 32px;
 							position: relative;
 							line-height: 52px;
 							margin-left: 3px;
+							cursor: pointer;
 
 							@include break(mobile){
 								line-height: 45px;
@@ -1068,12 +1049,6 @@
 							&.social {
 								&.search {
 									line-height: 38px;
-	
-									/*
-									@include break(mobile){
-										background-position: center center;
-									}
-									*/
 								
 									form {
 										top: $header-interior-line-height;
@@ -1099,26 +1074,16 @@
 		// (.interior logo)
 		@if $isAMP != 'true' {
 		#logo {
-			//background-size: 181px;
-			//line-height: $header-interior-line-height;
-			//height: $header-interior-line-height;
-			//padding-bottom: 3px;
-			//width: 166px;
 		    width: 205px;
 		    height: 39px;
 
 			a {
-				//line-height: $header-interior-line-height;
-				//height: $header-interior-line-height;
 				display:block;
 			    width: 205px;
 			    height: 39px;
 			}
 
 			@include break(mobile) {
-				//margin-left: 2px;
-				//height: $header-interior-line-height-mobile;
-				//background-position: -7px -2px;
 			    width: 205px;
 			    height: 45px;
 			}
